[spark] start mocking out spark-repl webapp